# prompster-cli

./: .env.example  .gitignore  .spotify_cache  README.md  hitster.typ  main.py  pyproject.toml
.claude/: settings.local.json
examples/: simple_card_generation.py
prompster/agent/: __init__.py  agent.py  service.py  system_prompt.md  views.py
prompster/agent/tools/: __init__.py  registry.py  schema_builder.py  service.py  views.py
prompster/cli/: __init__.py  app.py  config.py  voice.py
prompster/cli/commands/: __init__.py  generate.py  hister_agent.py  model.py  repl.py  system_prompt.md
prompster/export/: __init__.py  layout.py  renderer.py  views.py
prompster/export/templates/: card_back.typ  card_front.typ  deck.typ
prompster/llm/: __init__.py  factory.py
prompster/mcp/: __init__.py  server.py  views.py
prompster/spotify/: __init__.py  client.py  credentials.py  schemas.py  service.py  views.py
