[project]
name = "prompster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "agentory[openai]>=0.1.2",
    "click>=8.3.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "qrcode[pil]>=8.2",
    "questionary>=2.1.1",
    "rich-click>=1.9.7",
    "spotipy>=2.26.0",
    "transcriptify[mic]>=0.1.0",
    "typst>=0.14.8",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1,<9",
    "pytest-asyncio>=1.1.0,<2",
    "ruff>=0.13.1",
    "pre-commit>=4.3.0",
]

[project.scripts]
prompster = "prompster.cli.app:cli"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff.lint]
select = ["E","F","I","UP","B","SIM","PL","RUF","C90"]
ignore = [
  "E501",     # line too long
  "E402",     # imports not at top of file
  "PLC0415",  # import should be at top-level
  "PLR2004",  # magic values
  "PLR0911",  # too many return statements
  "PLR0912",  # too many branches
  "PLR0913",  # too many arguments
  "PLR0915",  # too many statements
  "C901",     # function too complex
  "RUF006",   # create_task return value not stored
  "PLW0603",  # global statement
  "PLW2901",  # loop variable overwritten
  "RUF001",   # en dash, etc.
  "UP046",    # derive from generic base class
]
